@@ -1,0 +1,3 @@
+File "include15.txt": example of rekursive inclusion.
+
+.. include:: include16.txt
